[package]
name = "demo1"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.5", features = ["ws"] }
tokio = { version = "1", features = ["full", "rt-multi-thread"] }
tera = "1.10"
hyper = "0.14"
tokio-tungstenite = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"